--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     image: mongo:4.0-xenial
     ports:
       - 27018:27018
-    volumes:
-      - pasargad:/data
-volumes:
-  - pasargad:
+#     volumes:
+#       - pasargad:/data
+# volumes:
+#   - pasargad:
